@@ -70,6 +70,9 @@ Some changes are not backward compatible and may require code change in the proj
 * createTableHeadFilter
 ** add option valueCaptionProvider which allows asynchronous providing of code/caption data for filter dialog
 
+* comment widget
+** initial commit of a comment widget to store comments in the database (bcd_comment) on scope/instance level (scope subjectsettings)
+
 .Utils
 * bcdui.util.getUuid() returns you an uuid
 
